# fintrack

./: .env.example  .gitignore  Dockerfile  README.md
backend/: auth.py  database.py  db_fix.py  debug_db.py  debug_output.txt  finance.db  main.py  migrate.py  migrate_budgets.py  migrate_indexes.py  migrate_security.py  migrate_user_id.py  models.py  pyproject.toml  requirements.txt  reset_db.py  verify_isolation.py  verify_output.txt
frontend/: build_clean.txt  build_final.txt  build_log.txt  lint_after_build.txt  lint_ascii.txt  lint_final.txt  lint_final_2.txt  lint_output.txt  lint_output_utf8.txt  package-lock.json  package.json
frontend/src/: App.css  App.jsx  api.js  constants.js  index.css
frontend/src/components/: Admin.jsx  BudgetManager.jsx  CloudMonitor.css  CloudMonitor.jsx  Home.jsx  Profile.jsx  SavingGoals.jsx  TransactionForm.jsx  TransactionFormModal.jsx  TransactionHistory.jsx  WeeklyReport.jsx
frontend/src/context/: AppProvider.jsx
frontend/src/i18n/: en.json  hi.json  index.js
frontend/src/pages/: SignIn.jsx  SignUp.jsx
